--- a/Beta.css
+++ b/Beta.css
@@ -22,6 +22,13 @@
     text-align: center;
 }
 
-div {
-    width: ;
+.navbar {
+  
+    margin-top: -10px;
+    width: 100%;
+    height: 100px;
+    
+}
+.gray {
+   background-color: gray;
 }
