--- a/Styles.css
+++ b/Styles.css
@@ -17,6 +17,28 @@
 .border-right1px {
     border-right: 1px;
 }
+.center {
+    text-align: center;
+}
+
+.navbar {
+  
+    margin-top: -10px;
+    width: 100%;
+    height: 100px;
+    
+}
+.gray {
+   background-color: gray;
+}
+
+.blue {
+    background-color: #1A1A40;
+    
+}
+.white {
+    background-color: º#FCF8E8;
+}
 
 
 
