--- a/Beta.css
+++ b/Beta.css
@@ -16,7 +16,7 @@
 
 .border-right1px {
     border-right: 1px;
-    
+
 }
 
 .center {
@@ -39,5 +39,6 @@
     
 }
 .white {
-    background-color: º#FCF8E8;
+    background-color: #FCF8E8;
 }
+
